# process-pdf-books

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: try_pypdf2.py
